fix(alignment): fix alignment of user dropdown menu

--- a/crowdsource-ui/src/views/common/header/header.css
+++ b/crowdsource-ui/src/views/common/header/header.css
@@ -42,6 +42,11 @@
         min-width: 8rem !important;
     }
 
+    #userNavBar .dropdown-menu {
+        right: 0;
+        left: auto;
+    }
+
     .logo{
         width: 190px;
         height: 48px;
